--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trying to upload files in mongodb",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon server.js",
     "start": "node server.js"
   },
   "author": "Aditya",
